--- a/SignalRWebUI/Views/Contact/UpdateContact.cshtml
+++ b/SignalRWebUI/Views/Contact/UpdateContact.cshtml
@@ -1,53 +1,47 @@
-﻿@model UpdateBookingDto
+﻿@model UpdateContactDto
 
 @{
-    ViewData["Title"] = "UpdateBooking";
+    ViewData["Title"] = "UpdateContact";
     Layout = "~/Views/AdminLayout/Index.cshtml";
 }
 
 <div class="content">
     <div class="container-fluid">
-        <h4 class="page-title">Rezervasyon İşlemleri</h4>
+        <h4 class="page-title">Ana Sayfa Alt İletişim İşlemleri</h4>
         <div class="row">
             <div class="col-md-12">
                 <form method="post">
                     <div class="card">
                         <div class="card-header">
-                            <div class="card-title">Rezervasyon Güncelleme Ekranı</div>
+                            <div class="card-title">Yeni İletişim Yazısı Girişi</div>
                         </div>
-                        <input type="hidden" asp-for="BookingID" />
+                        <input type="hidden" asp-for="ContactID"/>
                         <div class="card-body">
                             <div class="form-group">
-                                <label for="Name">Ad Soyad</label>
-                                <input type="text" class="form-control" asp-for="Name" id="Name">
+                                <label for="Location">Konum Giriniz</label>
+                                <input type="text" class="form-control" asp-for="Location" id="Location">
                             </div>
                         </div>
                         <div class="card-body">
                             <div class="form-group">
-                                <label for="Phone">Telefon</label>
+                                <label for="Phone">Telefon Numarası Giriniz</label>
                                 <input type="text" class="form-control" asp-for="Phone" id="Phone">
                             </div>
                         </div>
                         <div class="card-body">
                             <div class="form-group">
-                                <label for="Mail">Mail Adresi</label>
+                                <label for="Mail">Mail Adresi Giriniz</label>
                                 <input type="email" class="form-control" asp-for="Mail" id="Mail">
                             </div>
                         </div>
                         <div class="card-body">
                             <div class="form-group">
-                                <label for="PersonCount">Kişi Sayısı</label>
-                                <input type="number" class="form-control" asp-for="PersonCount" id="PersonCount">
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <div class="form-group">
-                                <label for="Date">Rezervasyon Tarihi</label>
-                                <input type="number" class="form-control" asp-for="Date" id="Date">
+                                <label for="FooterDescription">Açıklamayı Giriniz</label>
+                                <textarea rows="5" class="form-control" asp-for="FooterDescription" id="FooterDescription"></textarea>
                             </div>
                         </div>
                         <div class="card-action">
-                            <button class="btn btn-primary">Rezervasyonu Güncelle</button>
+                            <button class="btn btn-primary">İletişim Bilgisi Ekle</button>
                         </div>
                     </div>
                 </form>
