--- a/SignalRWebUI/Views/Discount/CreateDiscount.cshtml
+++ b/SignalRWebUI/Views/Discount/CreateDiscount.cshtml
@@ -1,41 +1,46 @@
-﻿@model UpdateAboutDto
+﻿@model CreateDiscountDto
 
 @{
-    ViewData["Title"] = "UpdateAbout";
+    ViewData["Title"] = "CreateDiscount";
     Layout = "~/Views/AdminLayout/Index.cshtml";
 }
 
 <div class="content">
     <div class="container-fluid">
-        <h4 class="page-title">Ana Sayfa Hakkımızda İşlemleri</h4>>
+        <h4 class="page-title">İndirimli Ürün İşlemleri</h4>
         <div class="row">
             <div class="col-md-12">
                 <form method="post">
                     <div class="card">
                         <div class="card-header">
-                            <div class="card-title">Hakkımızda Yazı Güncelleme Sayfası</div>
+                            <div class="card-title">Yeni İndirimli Ürün Girişi</div>
                         </div>
-                        <input type="hidden" asp-for="AboutID" />
                         <div class="card-body">
                             <div class="form-group">
-                                <label for="Title">Başlığı Giriniz</label>
+                                <label for="Title">Ürün Adınız Giriniz</label>
                                 <input type="text" class="form-control" asp-for="Title" id="Title">
                             </div>
                         </div>
                         <div class="card-body">
                             <div class="form-group">
-                                <label for="ImageUrl">Görselin URL'ini Giriniz</label>
+                                <label for="Amount">Ürün İndirim Oranı Giriniz</label>
+                                <input type="text" class="form-control" asp-for="Amount" id="Amount">
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <div class="form-group">
+                                <label for="ImageUrl">Ürün Görselini Giriniz</label>
                                 <input type="text" class="form-control" asp-for="ImageUrl" id="ImageUrl">
                             </div>
                         </div>
                         <div class="card-body">
                             <div class="form-group">
-                                <label for="Description">Açıklamayı Giriniz</label>
-                                <textarea rows="5" class="form-control" asp-for="Description" id="Description"></textarea>
+                                <label for="Description">Ürün Açıklamasını Giriniz</label>
+                                <input type="text" class="form-control" asp-for="Description" id="Description">
                             </div>
                         </div>
                         <div class="card-action">
-                            <button class="btn btn-primary">Hakkımda Yazısını Güncelle</button>
+                            <button class="btn btn-primary">İndirimli Ürünü Ekle</button>
                         </div>
                     </div>
                 </form>
