--- a/SignalRWebUI/Views/Shared/Components/_LayoutSidebarPartialComponent/Default.cshtml
+++ b/SignalRWebUI/Views/Shared/Components/_LayoutSidebarPartialComponent/Default.cshtml
@@ -64,7 +64,7 @@
 				</a>
 			</li>
 			<li class="nav-item">
-				<a href="notifications.html">
+				<a href="/Booking/">
 					<i class="la la-bell"></i>
 					<p>Rezervasyonlar</p>
 					<span class="badge badge-success">3</span>
@@ -83,13 +83,19 @@
 				</a>
 			</li>
 			<li class="nav-item">
-				<a href="icons.html">
+				<a href="/Discount/">
 					<i class="la la-fonticons"></i>
 					<p>İndirimler</p>
 				</a>
 			</li>
 			<li class="nav-item">
-				<a href="icons.html">
+				<a href="/Contact/">
+					<i class="la la-fonticons"></i>
+					<p>İletişim</p>
+				</a>
+			</li>
+			<li class="nav-item">
+				<a href="/Feature/">
 					<i class="la la-fonticons"></i>
 					<p>Öne Çıkanlar</p>
 				</a>
