--- a/SignalRWebUI/Views/_ViewImports.cshtml
+++ b/SignalRWebUI/Views/_ViewImports.cshtml
@@ -4,4 +4,7 @@
 @using SignalRWebUI.Dtos.ProductDtos
 @using SignalRWebUI.Dtos.AboutDtos
 @using SignalRWebUI.Dtos.BookingDtos
+@using SignalRWebUI.Dtos.ContactDtos
+@using SignalRWebUI.Dtos.DiscountDtos
+@using SignalRWebUI.Dtos.FeatureDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
