--- a/SignalRWebUI/Views/Shared/Components/_LayoutSidebarPartialComponent/Default.cshtml
+++ b/SignalRWebUI/Views/Shared/Components/_LayoutSidebarPartialComponent/Default.cshtml
@@ -101,7 +101,7 @@
 				</a>
 			</li>
 			<li class="nav-item">
-				<a href="icons.html">
+				<a href="/Testimonial/">
 					<i class="la la-fonticons"></i>
 					<p>Referanslar</p>
 				</a>
